# mcp-blender-bridge

./: .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  run_blender_tests.ps1  run_tests.bat  run_validation_tests.bat
controller/: CONTRIBUTING_INVENTORY.md  _test_e2e.py  pyproject.toml  requirements.txt
controller/app/: bpy_utils.py  bridge_api.py  bridge_models.py  gemini_client.py  globals.py  inject_bpy.py  knowledge_engine.py  logging_utils.py  main.py  mcp_server.py  models.py  preview_bpy.py  services.py  system_prompt.md  tool_index.py  validation.py
controller/bridge_runner/: docker_runner.py  sandbox_runner.py
controller/capabilities/2d/: gpencil.yaml
controller/capabilities/animation/: anim.yaml  armature.yaml  (+2 more)
controller/knowledge_base/: jouet_sapin_en_bois.yaml
controller/logging/: bpy_audit.py
controller/logs/: inject_2025-11-28T09-14-37.402896.json  inject_2025-11-28T09-16-30.374890.json
controller/tests/: test_batch_execution.py  test_bpy_validator.py  test_bridge_api.py  test_bridge_models.py  test_chat_service.py  test_chat_service_router.py  test_chat_service_sticky.py  test_debug.py  test_end_to_end_flow.py  test_gemini_client_async.py  test_inspect_integration.py  test_knowledge_engine.py  test_main.py  test_mcp_server.py  test_mcp_server_extra.py  test_mcp_tools.py  test_mcp_validation.py  test_models.py  test_security_bypass.py  test_security_validation.py  test_tool_index.py  test_tool_index_performance.py  test_validation.py  test_validator_rejections.py
controller/validators/: bpy_validator.py  script_extractor.py
(+265 files in other folders)
